--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -42,4 +42,13 @@
     <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
     <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
     <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+
+    <Color x:Key="Accent">#5A67FF</Color>
+    <Color x:Key="AccentDark">#3C4CE0</Color>
+    <Color x:Key="NeutralButton">#E5E7EB</Color>
+    <Color x:Key="NeutralButtonText">#333333</Color>
+    <SolidColorBrush x:Key="AccentBrush" Color="{StaticResource Accent}"/>
+    <SolidColorBrush x:Key="AccentDarkBrush" Color="{StaticResource AccentDark}"/>
+    <SolidColorBrush x:Key="NeutralButtonBrush" Color="{StaticResource NeutralButton}"/>
+    <SolidColorBrush x:Key="NeutralButtonTextBrush" Color="{StaticResource NeutralButtonText}"/>
 </ResourceDictionary>
