--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -7,7 +7,7 @@
     Title="systemcopyfile">
 
     <ShellContent
-        Title="Home"
+        Title="首页"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
